fix: remove gap

--- a/assets/css/built/styles.css
+++ b/assets/css/built/styles.css
@@ -1109,9 +1109,6 @@ video {
 .items-center {
   align-items: center;
 }
-.gap-2 {
-  gap: 0.5rem;
-}
 .gap-4 {
   gap: 1rem;
 }
